--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -64,7 +64,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: 8px;
+  border-radius: 8cqmax;
   background-color: #FF7F00;
   transition: 0.4s;
 }
