--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -41,11 +41,11 @@
   color: #ffffff;
 }
 
-.intro-navbar .nav-link.active {
+.intro-navbar:not(.dark) .nav-link.active {
   color: #FF7F00 !important;
 }
 
-.intro-navbar .nav-link:hover {
+.intro-navbar:not(.dark) .nav-link:hover {
   color: #27548A !important;
 }
 
