--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -8,7 +8,7 @@
   left: 0;
   right: 0;
   padding: 12px 24px;
-  color: #ffffff;
+  color: #000000;
   background-color: #e2e2e9;
   z-index: 1000;
 }
