--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,7 +66,7 @@ p {
 .error-card {
   text-align: center;
   margin: 50px auto;
-  padding: 16px;
+  padding: 50px;
   max-width: 600px;
   border-radius: 8px;
   border: 3px solid #27548A;
@@ -97,7 +97,7 @@ input[type="date"]:hover {
 .dark .error-card {
   border: 3px solid #f5c8a1;
   color: #000000;
-  background-color: #f5c8a1;
+  background-color: #efc9a9;
   box-shadow: 0 4px 6px rgb(247, 218, 192);
 }
 
