--- a/frontend/src/pages/History.css
+++ b/frontend/src/pages/History.css
@@ -61,7 +61,7 @@
 }
 
 .history-page .delete-button:hover {
-  background-color: #e24446;
+  background-color: #b03537;
   transition: all 0.3s ease;
 }
 
