--- a/frontend/src/components/APODCard.css
+++ b/frontend/src/components/APODCard.css
@@ -143,7 +143,7 @@
 }
 
 .favourite-button.delete-button:hover {
-  background-color: #e24446;
+  background-color: #b03537;
 }
 
 .favourite-button.share-button {
